force-app/main/default/objects/GrantsDocumentRequirements__c/GrantsDocumentRequirements__c.object-meta.xml
<CustomObject>
    <label>Grants Document Requirement</label>
    <nameField>
        <label>Grants Document Requirements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants Document Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>