force-app/main/default/objects/GrantsDocumentRequirements__c/fields/Days_To_Submit__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Submit__c</fullName>
    <formula>CASE(Due_Period__c, &quot;24 Hours&quot;, 1, &quot;7 Days&quot;, 7,&quot;14 Days&quot;,14,&quot;1 Month&quot;,30,60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Submit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>