force-app/main/default/objects/GrantsDocumentRequirements__c/fields/Due_Period__c.field-meta.xml
<CustomField>
    <fullName>Due_Period__c</fullName>
    <label>Due Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>