force-app/main/default/objects/GrantsDocumentRequirements__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>outfunds__Funding_Program__c</referenceTo>
    <relationshipLabel>Grants Document Requirements</relationshipLabel>
    <relationshipName>Grants_Document_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>